manifests/privatebin/middleware-redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: privatebin
spec:
  redirectScheme:
    scheme: https
    permanent: true
