manifests/privatebin/ingressroute-web.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: privatebin-web
  namespace: privatebin
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`secrets.yornik.eu`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: privatebin
      services:
        - name: privatebin
          port: 8080
