manifests/privatebin/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: privatebin
  namespace: privatebin
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`secrets.yornik.eu`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: privatebin
        - name: rate-limit
          namespace: traefik
      services:
        - name: privatebin
          port: 8080
  tls:
    certResolver: letsencrypt
